created radio buttons.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,25 @@
           <label for="add2">2nd number:</label>
           <input id="add2" class="form-control" type="text">
         </div>
-        <button type="submit" class="btn">Add!</button>
+        <div class="radio">
+          <label>
+            <input type="radio" name="fn" value="add">
+            Add
+          </label>
+          <label>
+            <input type="radio" name="fn" value="subtract">
+            Subtract
+          </label>
+          <label>
+            <input type="radio" name="fn" value="multiply">
+            Multiply
+          </label>
+          <label>
+            <input type="radio" name="fn" value="divide">
+            Divide
+          </label>
+        </div>
+        <button type="submit" class="btn">Calcualte!</button>
       </form>
     </div>
   </body>
